@@ -1,6 +1,10 @@
 2004-10-13  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-scanobj.in: 
+	* gtkdoc-scangobj.in: patch from Olexiy Avramchenko to add 3 new
+	GdkEvent subtypes.
+
+	* gtkdoc-scanobj.in: 
 	* gtkdoc-scangobj.in: patch from Benjamin Otte to get rid of
 	-Wsign-compare warnings. Bug #137013.
 
